Patch 2 of the day * H4CK3R's hand starts to be able to search for attributes to modify ** the search function is heavily assisted by DeepSeek